<resources>
    <string name="app_name">Task Manager</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Clicca qui per registrarti</string>
    <string name="already_registered">Se già registrato?</string>
    <string name="name">Nome</string>
    <string name="phone_number">Numero telefonico</string>
    <string name="register">Registrati</string>
    <string name="name_error">Inserisci il tuo nome</string>
    <string name="phone_error">Inserisci il tuo numero di telefono</string>
    <string name="email_error">Inserisci il tuo indirizzo e-mail</string>
    <string name="error_invalid_email">Questo indirizzo e-mail non è valido</string>
    <string name="password_error">Inserisci una password</string>
    <string name="error_invalid_password">Inserisci una password di almeno 6 caratteri</string>
    <string name="good_login_1">PERFETTO!</string>
    <string name="good_login_2">Il Login è avvenuto con successo.</string>
    <string name="continua">Continua</string>
    <string name="bad_login_1">ATTENZIONE!</string>
    <string name="bad_login_2">Qualcosa è andato storto.</string>
    <string name="navigation_drawer_open">Apertura navigation drawer</string>
    <string name="navigation_drawer_close">Chiusura navigation drawer</string>
    <string name="indietro">indietro</string>
    <string name="cancella">cancella</string>
    <string name="modifica">modifica</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>