<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="16dp"
    android:scrollbarThumbVertical="@null"
    tools:context="activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lemon_jelly"
            android:text="@string/app_name"
            android:textColor="?android:attr/colorPressedHighlight"
            android:textSize="64sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/cardview_dark_background"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/TextInputLayoutStyle"
                    app:hintTextAppearance="@style/MyHintStyle"
                    android:textColorHint="@color/white">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/name"
                        android:inputType="textNoSuggestions"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/TextInputLayoutStyle"
                    app:hintTextAppearance="@style/MyHintStyle"
                    android:textColorHint="@color/white">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/TextInputLayoutStyle"
                    app:hintTextAppearance="@style/MyHintStyle"
                    android:textColorHint="@color/white">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/TextInputLayoutStyle"
                    app:hintTextAppearance="@style/MyHintStyle"
                    android:textColorHint="@color/white"
                    app:passwordToggleEnabled="true">

                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <!--
                android:background="@drawable/button_gradient"
                    app:backgroundTint="@drawable/button_gradient"
                -->

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/already_registered"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>